--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -3,6 +3,7 @@ FROM node:10-alpine
 RUN apk update && \
     apk add git
 
-RUN npm install -g npm@6
+RUN npm install -g npm@6 \
+    npm isntall node-sass
 
 WORKDIR /app
