--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,15 @@ services:
       - 443:443
     networks:
       - stringee
+  redis:
+    container_name: redis
+    build:
+      context: ./redis
+      dockerfile: Dockerfile
+    ports:
+      - 6379:6379
+    networks:
+      - stringee
 
 networks:
   stringee:
